infra/k8s/nginx/nginx-deployment.yaml
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: nginx
  labels:
    app: nginx
spec:
  replicas: 2
  # selector defaults to template's labels
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: premhashmap/nginx:django-demo
        ports:
        - name: http
          containerPort: 80
        - name: https
          containerPort: 443
