infra/k8s/nginx/django-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/rewrite-target: '*'
    ingress.kubernetes.io/ssl-redirect: "true"
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
  name: django-ingress
spec:
  rules:
  - host: django.example.com
    http:
      paths:
      - backend:
          serviceName: nginx-service
          servicePort: 80
        path: /
  tls:
  - hosts:
    - django.example.com
    secretName: django-cert
